# ray_simulator

./: .gitignore  README.md  data_manager.py  evaluate_data.py  generate_data.py  grid_map.py  old_stuff.py  point_cloud.py  rangefinder.py  ray_evaluator.py  result_plotter.py  scan_match_filter_evaluation.py  scan_matcher.py  tsdf.py  tsdf_inserter.py
data/: evaluate_random_filter_data_test.npy  evaluate_voxel_filter_data.npy  evaluate_voxel_filter_data_test.npy
data/2d/: info.txt  (+6 more)
data/2d (copy)/: evaluate_floorplan_simplified_perfect_max_entropy_normal_filter_translation.npy  evaluate_floorplan_simplified_perfect_random_filter_translation.npy  evaluate_floorplan_simplified_perfect_voxel_filter_translation.npy
filter/: biased_normal_filter.py  normal_filter.py  normal_voxel_filter.py  point_cloud_filter.py  simple_filter.py  voxel_filter.py
nativ/: CMakeLists.txt  build.sh  scan_matcher.cpp  setup.py
nativ/include/: occupied_space_cost_function_2d.h
nativ/src/: occupied_space_cost_function_2d.cpp  scan_matcher.cpp
native/: CMakeLists.txt
native/include/: occupied_space_cost_function_2d.h
native/src/: occupied_space_cost_function_2d.cpp  scan_matcher.cpp
scans/: range_data_1527600509.csv  range_data_1527600510.csv  range_data_1527600511.csv  range_data_1527600512.csv  range_data_1527600513.csv  range_data_1527600514.csv  range_data_1527600515.csv  range_data_1527600516.csv  range_data_1527600517.csv  range_data_1527600518.csv  range_data_1527600519.csv  range_data_1527600520.csv  range_data_1527600521.csv  range_data_1527600522.csv  range_data_1527600523.csv
(+8 files in other folders)
